- Fixed background position for main gradient to prevent cutoff. - Only Section div will get scrollbars now due to overflow-x:auto, so header and footer are always ok. - Maybe I should be setting the height of the section div as %, subtracting % of header and footer?

--- a/trunk/sillypog.com/style.css
+++ b/trunk/sillypog.com/style.css
@@ -10,6 +10,8 @@ body{
 	
 	background:-moz-radial-gradient(center, #f0f0f0, #cccccc) no-repeat #cccccc;
 	background:-webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(#f0f0f0), to(#cccccc)) no-repeat #cccccc;
+	background-attachment:fixed;
+	
 	
 	/* Global text properties */
 	color:#666666;
@@ -140,6 +142,7 @@ a img{
 	width:100%;
 	text-align:center; /* Has to be set so that IE will horizontally centre content */
 	clear:both;	/* Needed for vertical centering with floater method */
+	overflow-x:auto;
 }
 
 #about{
